11/11/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 3.0.1.0 'Practical Frost':
	- Cosmetic changes.
	- Log output time starts with 0.
	- Dropping user privileges added.
	- OpenSUSE support added.
	- "-m 0" and "-m 1" options fixed.

11/10/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 3.0.0.0 'Practical Frost':
	- New network engine for Linux kernel 3.9+.
	
11/08/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.7.2 'Harding Grim':
	- SHA256 agility updated: 441 error code on too weak SHA function.
	
11/07/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.7.1 'Harding Grim':
	- CentOS  / Fedora uninstall script.
	- Debian compilation error fixed.
	- OpenSSL 0.9.7 and earlier build fixed.
	- NetBSD build fixed.

11/03/2013 Oleg Moskalenko <mom040267@gmail.com>,
	Peter Dunkley <peter.dunkley@crocodilertc.net>
Version 2.6.7.0 'Harding Grim':
	- CentOS 6 pre-compiled distribution.
	- Fedora pre-compiled distribution.
	- TURN_NO_TLS case compilation cleaning.
	- Text files cleaning.
	- Issue 68 fixed (no-stun option added).

10/27/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.6.1 'Harding Grim':
	- SHA256 added as a non-standard message integrity option.
	- CentOS rpm specs added.
	- Peter Dunkley added to the authors list.

10/20/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.6.0 'Harding Grim':
	- Cygwin loopback relay interfaces fixed (Issue 62).
	- rpath added to the Makefile (Issue 63).
	- CONFLICTS added to FreeBSD port Makefile (Issue 64).
	- Certificate check options, for server and for the test client (Issue 65).
	- Some compilation cleaning.

10/09/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.5.2 'Harding Grim':
	- Documentation changes.
	- Redis-related memory leak fixed (Issue 61).

09/25/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.4.1 'Harding Grim':
	- Crash on uninitialized redis db name is fixed (Issue 59).
	- Optional authentication of STUN Binding request is implemented (Issue 60).
