@@ -206,6 +206,8 @@ Flags:
 			SHA256 hash function if this option is used. If the server obtains a message 
 			from the client with a weaker (SHA1) hash function then the server returns 
 			error code 441.
+			
+--mobility		Mobility with ICE (MICE) specs support. Forces -m 1 option.
 
 -h			Help.
     
