@@ -485,6 +485,10 @@
 #
 #sha256
 
+# Mobility with ICE (MICE) specs support. Forces -m 1 option.
+#
+#mobility
+
 # User ID to run the process. After the initialization, the turnserver process
 # will make an attempt to change the current user ID to that user.
 #
