@@ -317,6 +317,10 @@ from the client with a weaker (SHA1) hash function then the server returns
 error code 441.
 .TP
 .B
+\fB\-\-mobility\fP
+Mobility with ICE (MICE) specs support. Forces \fB\-m\fP 1 option.
+.TP
+.B
 \fB\-h\fP
 Help.
 .TP
